new images for the carousel

--- a/_posts/2020-09-18-covid-letter-from-the-ceo.html
+++ b/_posts/2020-09-18-covid-letter-from-the-ceo.html
@@ -47,36 +47,50 @@ author: billy
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="/images/edu-LasColinas-02.jpg" style="height:550px"
-                                                        class="d-block w-100 rounded"
-                                                        alt="Education - Las Colinas school - Ipala, Guatemala">
+                                                    <img src="/images/supply_bundles-min.jpg" style="height:550px"
+                                                        class="d-block w-100 rounded" alt="food bundles">
                                                     <div class="carousel-caption d-none d-md-block">
-                                                        <p class="text-light bg-dark">Escuela De Las Colinas</p>
+                                                        <p class="text-light bg-dark">Food bundles</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="/images/edu-2019-Desks3-AdultEdu.jpeg"
-                                                        style="height:550px" class="d-block w-100 rounded"
-                                                        alt="Education - English class - Ipala, Guatemala">
+                                                    <img src="/images/food_recipient_1-min.jpg" style="height:550px"
+                                                        class="d-block w-100 rounded" alt="man getting food bundle">
                                                     <div class="carousel-caption d-none d-md-block">
-                                                        <p class="text-light bg-dark">Students learning English</p>
+                                                        <p class="text-light bg-dark">Man with a food bundle</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="/images/edu-Pain-05.jpg" class="d-block w-100 rounded"
-                                                        style="height:550px"
-                                                        alt="Education - P.A.I.N school - Ipala, Guatemala">
+                                                    <img src="/images/food_recipient_2-min.png"
+                                                        class="d-block w-100 rounded" style="height:550px"
+                                                        alt="Woman with a food bundle">
                                                     <div class="carousel-caption d-none d-md-block">
-                                                        <p class="text-light bg-dark">P.A.I.N schooling</p>
+                                                        <p class="text-light bg-dark">Woman with a food bundle</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="/images/edu-powerpoint.jpg" class="d-block w-100 rounded"
-                                                        style="height:550px"
-                                                        alt="Education - technology - Ipala, Guatemala">
+                                                    <img src="/images/food_recipient_3-min.png"
+                                                        class="d-block w-100 rounded" style="height:550px"
+                                                        alt="Woman with a food bundle">
                                                     <div class="carousel-caption d-none d-md-block">
-                                                        <p class="text-light bg-dark">Students learning powerpoint
-                                                            skills
+                                                        <p class="text-light bg-dark">Woman with a food bundle
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img src="/images/food_recipient_4-min.png"
+                                                        class="d-block w-100 rounded" style="height:550px"
+                                                        alt="Woman with a food bundle">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <p class="text-light bg-dark">Woman with a food bundle
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img src="/images/cidher_team-min.jpg" class="d-block w-100 rounded"
+                                                        style="height:550px" alt="Woman with a food bundle">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <p class="text-light bg-dark">C.I.D.H.E.R team
                                                         </p>
                                                     </div>
                                                 </div>
