--- a/_drafts/2020-09-18-covid-letter-from-the-ceo-old.html
+++ b/_drafts/2020-09-18-covid-letter-from-the-ceo-old.html
@@ -143,7 +143,8 @@ author: billy
                                     <p>&nbsp;&nbsp;&nbsp;Thanks,<br>
                                         &nbsp;&nbsp;&nbsp;Billy Earles<br>
                                         <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;AEHCA<br></small>
-                                        <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;CEO<br></small></p>
+                                        <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;CEO<br></small>
+                                    </p>
                                 </div>
                             </div>
                         </div>
