--- a/_posts/2020-09-18-covid-letter-from-the-ceo.html
+++ b/_posts/2020-09-18-covid-letter-from-the-ceo.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: 2020 Response to Covid-19 in Central America
+title: 2020 Response to Covid-19 in Central America [Archived]
 tags: guatemala, ipala, education, trip, schools, covid, relief
+category: archived
 keywords: guatemala, ipala, education, trip, schools, covid, relief
 author: billy
 ---
@@ -21,7 +22,7 @@ author: billy
             <p></p>
             <p class="lead text-center">Association for Education and Health in Central America</p>
             <hr class="my-4">
-            <h4 class="mt-0">2020 Response to Covid-19 in Central America</h4>
+            <h4 class="mt-0">{{ page.title }}</h4>
             <p></p>
             <div class="media">
                 <div class="container">
